--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,16 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -502,7 +512,8 @@
 					<verbose>true</verbose>
 					<enhancerName>ASM</enhancerName>
 					<api>JPA</api>
-					<mappingExcludes>**/CustomRequestFactoryServlet.class, **/GaeAuthFilter.class</mappingExcludes>
+					<mappingExcludes>**/CustomRequestFactoryServlet.class,
+						**/GaeAuthFilter.class</mappingExcludes>
 				</configuration>
 				<executions>
 					<execution>
