--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
-#Updated at Fri Nov 08 14:11:53 CET 2013
-#Fri Nov 08 14:11:53 CET 2013
+#Updated at Sat Nov 09 16:26:10 CET 2013
+#Sat Nov 09 16:26:10 CET 2013
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 log4j.appender.R.File=application.log
 log4j.appender.R.MaxFileSize=100KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
