--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *target*
+log.roo
 *.jar
 *.war
 *.ear
@@ -25,4 +26,3 @@ local.properties
 
 # Locally stored "Eclipse launch configurations"
 *.launch
-/target
