--- a/pom.xml
+++ b/pom.xml
@@ -497,55 +497,44 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>com.google.appengine</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-				<version>${gae.version}</version>
-			</plugin>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>${gae.version}</version>
+            </plugin>
 			<plugin>
-				<groupId>org.datanucleus</groupId>
-				<artifactId>maven-datanucleus-plugin</artifactId>
-				<version>3.1.3</version>
-				<configuration>
-					<fork>false</fork>
-					<log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
-					<mappingIncludes>**/*.class</mappingIncludes>
-					<verbose>true</verbose>
-					<enhancerName>ASM</enhancerName>
-					<api>JPA</api>
-					<mappingExcludes>**/CustomRequestFactoryServlet.class,
-						**/GaeAuthFilter.class</mappingExcludes>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>enhance</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.datanucleus</groupId>
-						<artifactId>datanucleus-core</artifactId>
-						<version>3.1.3</version>
-					</dependency>
-					<dependency>
-						<groupId>org.datanucleus</groupId>
-						<artifactId>datanucleus-api-jpa</artifactId>
-						<version>3.1.3</version>
-					</dependency>
-					<dependency>
-						<groupId>org.datanucleus</groupId>
-						<artifactId>datanucleus-enhancer</artifactId>
-						<version>3.1.1</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.http-client</groupId>
-						<artifactId>google-http-client</artifactId>
-						<version>1.17.0-rc</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>maven-datanucleus-plugin</artifactId>
+                <version>3.1.3</version>
+                <configuration>
+                        <fork>false</fork>
+                        <log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
+                        <mappingIncludes>**/*.class</mappingIncludes>
+                        <verbose>true</verbose>
+                        <enhancerName>ASM</enhancerName>
+                        <api>JPA</api>
+                    <mappingExcludes>**/CustomRequestFactoryServlet.class, **/GaeAuthFilter.class</mappingExcludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.datanucleus</groupId>
+                        <artifactId>datanucleus-core</artifactId>
+                        <version>3.1.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.datanucleus</groupId>
+                        <artifactId>datanucleus-api-jpa</artifactId>
+                        <version>3.1.3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 		</plugins>
 	</build>
 </project>
