--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<spring.version>3.2.3.RELEASE</spring.version>
 		<gae.version>1.7.4</gae.version>
-		<gae.home>${user.home}/.m2/repository/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}</gae.home>
+		<gae.home>${user.home}/.m2/repository/com/google/appengine/appengine-java-sdk/${gae.version}</gae.home>
 	</properties>
 	<repositories>
 		<repository>
